2014-08-17  Marek Polacek  <polacek@redhat.com>
	    Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/62059
	* diagnostic.c (adjust_line): Add gcc_checking_assert.
	(diagnostic_show_locus): Don't print caret diagnostic
	if a column is larger than the line_width.

2014-08-17 Roman Gareev  <gareevroman@gmail.com>

	* common.opt: Make the ISL AST generator to be the main code generator
	of Graphite.

2014-08-16  Gerald Pfeifer  <gerald@pfeifer.com>

	* wide-int.h (generic_wide_int): Declare as class instead of struct.

2014-08-16  John David Anglin  <danglin@gcc.gnu.org>

	PR target/61641
	* config/pa/pa-protos.h (pa_output_addr_vec, pa_output_addr_diff_vec):
	Declare.
	* config/pa/pa.c (pa_reorg): Remove code to insert brtab marker insns.
	(pa_output_addr_vec, pa_output_addr_diff_vec): New.
	* config/pa/pa.h (ASM_OUTPUT_ADDR_VEC, ASM_OUTPUT_ADDR_DIFF_VEC):
	Define.
	* config/pa/pa.md (begin_brtab): Delete insn.
	(end_brtab): Likewise.

2014-08-16  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	* doc/cppopts.texi (ftrack-macro-expansion): Add missing @code.

2014-08-15  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-utils.h (ipa_polymorphic_call_context): Turn into class; add ctors.
	(possible_polymorphic_call_targets, dump_possible_polymorphic_call_targets,
	possible_polymorphic_call_target_p, possible_polymorphic_call_target_p): Simplify.
	(get_dynamic_type): Remove.
	* ipa-devirt.c (ipa_dummy_polymorphic_call_context): Remove.
	(clear_speculation): Bring to ipa-deivrt.h
	(get_class_context): Rename to ...
	(ipa_polymorphic_call_context::restrict_to_inner_class): ... this one.
	(contains_type_p): Update.
	(get_dynamic_type): Rename to ...
	ipa_polymorphic_call_context::get_dynamic_type(): ... this one.
	(possible_polymorphic_call_targets): UPdate.
	* tree-ssa-pre.c (eliminate_dom_walker::before_dom_children): Update.
	* ipa-prop.c (ipa_analyze_call_uses): Update.

2014-08-15  Oleg Endo  <olegendo@gcc.gnu.org>

	* doc/invoke.texi (SH options): Document missing processor variant